--- a/dos33.html
+++ b/dos33.html
@@ -3009,7 +3009,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     004 ;
                     005 <a class="f" name="FOPEN"      id="FOPEN"      >FOPEN       </a>EQU *
 2B22:20 28 2B       006             JSR DOPEN
-2B24:20 7F 33       007             JMP GOODIO
+2B24:4C 7F 33       007             JMP GOODIO
                     008 ;
                     009 
                     010 
