--- a/dos33.html
+++ b/dos33.html
@@ -188,37 +188,40 @@ span.patch {
     color: #F80; /* Orange */
 }
 
-.c00 { background-color:#Faa; color: #000; }
-.c01 { background-color:#Fea; color: #000; }
-.c02 { background-color:#FFa; color: #000; }
-.c03 { background-color:#eFa; color: #000; }
-.c04 { background-color:#aFa; color: #000; }
-.c05 { background-color:#aFe; color: #000; }
-.c06 { background-color:#aFF; color: #000; }
-.c07 { background-color:#aeF; color: #000; }
-.c08 { background-color:#aaF; color: #000; }
-.c09 { background-color:#eaF; color: #000; }
-.c10 { background-color:#FaF; color: #000; }
-.c11 { background-color:#Fae; color: #000; }
+/* 100% Saturation is too dark and over-powering. Lighten up to make it easier on the eyes. */
+/* S: ~25%, V: 100%  */
+.c00 { background-color:#Fbb; color: #000; } /* H:  0 #FFbfbf Red           */
+.c01 { background-color:#Fdb; color: #000; } /* H: 30 #FFdfbf Orange        */
+.c02 { background-color:#FFb; color: #000; } /* H: 60 #FFFFbf Yellow        */
+.c03 { background-color:#dFb; color: #000; } /* H: 90 #dfFFbf Lime Green    */
+.c04 { background-color:#bFb; color: #000; } /* H:120 #bfFFbf Green         */
+.c05 { background-color:#bFd; color: #000; } /* H:150 #bfFFdf Emerald Green */
+.c06 { background-color:#bFF; color: #000; } /* H:180 #bfFFFF Cyan          */
+.c07 { background-color:#bdF; color: #000; } /* H:210 #bfdfFF Sky Blue      */
+.c08 { background-color:#bbF; color: #000; } /* H:240 #bfbfFF Blue          */
+.c09 { background-color:#dbF; color: #000; } /* H:270 #dfbfFF Purple        */
+.c10 { background-color:#FbF; color: #000; } /* H:300 #FFbfFF Magenta       */
+.c11 { background-color:#Fbd; color: #000; } /* H:330 #FFbfdf Pink          */
 
-.c20 { background-color:#Fdd; color: #000; }
-.c21 { background-color:#Fed; color: #000; }
-.c22 { background-color:#FFd; color: #000; }
-.c23 { background-color:#eFd; color: #000; }
-.c24 { background-color:#dFd; color: #000; }
-.c25 { background-color:#dFe; color: #000; }
-.c26 { background-color:#dFF; color: #000; }
-.c27 { background-color:#deF; color: #000; }
-.c28 { background-color:#ddF; color: #000; }
-.c29 { background-color:#edF; color: #000; }
-.c30 { background-color:#FdF; color: #000; }
-.c31 { background-color:#Fde; color: #000; }
+.c20 { background-color:#Fbb; color: #000; } /* H:  0 */
+.c21 { background-color:#Fdb; color: #000; } /* H: 30 */
+.c22 { background-color:#FFb; color: #000; } /* H: 60 */
+.c23 { background-color:#dFb; color: #000; } /* H: 90 */
+.c24 { background-color:#bFb; color: #000; } /* H:120 */
+.c25 { background-color:#bFd; color: #000; } /* H:150 */
+.c26 { background-color:#bFF; color: #000; } /* H:180 */
+.c27 { background-color:#bdF; color: #000; } /* H:210 */
+.c28 { background-color:#bbF; color: #000; } /* H:240 */
+.c29 { background-color:#dbF; color: #000; } /* H:270 */
+.c30 { background-color:#FbF; color: #000; } /* H:300 */
+.c31 { background-color:#Fbd; color: #000; } /* H:330 */
 
+/* S: 100% */
 .c40 { background-color:#F00; color: #000; }
 .c41 { background-color:#F80; color: #000; }
 .c42 { background-color:#FF0; color: #000; }
-.c43 { background-color:#8F0; color: #000; }
-.c44 { background-color:#0F0; color: #000; }
+.c43 { background-color:#0F0; color: #000; } /* #8F0 skip lime green -> green #0F0 */
+.c44 { background-color:#0FF; color: #000; } /* #0F0 skip green      -> cyan  #0FF */
     </style>
 </head>
 <body>
