Add anchor for Color Memory

--- a/dos33.html
+++ b/dos33.html
@@ -7126,7 +7126,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
 <hr><hr>
 </pre>
 
-<h1>Color-Coded Memory by Source File</h1>
+<h1><a name='ColorMemory'></a>Color-Coded Memory by Source File</h1>
 <!--
     :%s/</\&lt;/g
     :%s/>/\&gt;/g
