Fix broken link BOOTLDR.298

--- a/dos33.html
+++ b/dos33.html
@@ -4967,7 +4967,7 @@ Let the complete clusterfrak of bad design commence in <a href="https://www.nasa
                     <a class='line' name='BOOTLDR.295'>295</a>             JMP <a class="x" href="#RCPATCH">RCPATCH</a>
                     296 <a class="f" name="RCBACK"   >RCBACK      </a>JSR SEKBD
                     297 ;
-                    298 <a class="f" name="DI3"      >DI3         </a>JMP <a class="x" href="#DOSREL">DOSREL</a>      ; GO TO POST INIT ROUTINE       ; Relocate DOS to high mem
+                    <a class='line' name='BOOTLDR.298'>298</a> <a class="f" name="DI3"      >DI3         </a>JMP <a class="x" href="#DOSREL">DOSREL</a>      ; GO TO POST INIT ROUTINE       ; Relocate DOS to high mem
                     299             PAGE
                     300 
                     301 
