--- a/dos33.html
+++ b/dos33.html
@@ -8731,7 +8731,7 @@ DATA_END    EQU *           ; $2300
 In contradistinction to the previous example, our new code plus initialized data only takes up 100 bytes ($64) in memory; This is only <b>1 sector</b> on disk <i>even though it uses the same Total run-time memory data bytes as Example 1 !</i>
 <p>
 
-<h1><a name="WastedSectors"></a>Wasted Sectors</h1>
+<h2><a class='section' name='WastedSectors'>3.3 Wasted Sectors</a></h2>
 <p>
 <b>Legend</b>: Track/Sector, Range on memory page, Source File, Bytes, Description, Link
 </p>
