Decorate github link

--- a/dos33.html
+++ b/dos33.html
@@ -262,7 +262,7 @@ span.patch {
 
 <h1><a class='section' name='Introduction'>1.0 Introduction</a></h1>
 <br>Transcribed and Annotated by Michael Pohoreski.
-<br>Latest version on GitHub: <a href="http://htmlpreview.github.com/?https://github.com/Michaelangel007/apple2_dos33/blob/master/dos33.html">dos33.html</a>
+<br>Latest version on GitHub: <a class='link' href="http://htmlpreview.github.com/?https://github.com/Michaelangel007/apple2_dos33/blob/master/dos33.html">dos33.html</a>
 <p>
 The <span class="i">intent</span> of providing this copyrighted source code is
  as a convenience for the curious as a <span class="b">means to learn</span>.
